--- a/src/poker-odds.html
+++ b/src/poker-odds.html
@@ -51,13 +51,13 @@
     </nav>
   </div>
 
-  <div class="container">
+  <header class="mb-4">
+    <div class="text-center" data-nosnippet>
+      <h1 class="pageheader">Poker Odds</h1>
+    </div>
+  </header>
 
-    <header class="py-3">
-      <div class="text-center" data-nosnippet>
-        <h1 class="pageheader">Poker Odds</h1>
-      </div>
-    </header>
+  <div class="container">
 
     <div class="row" id="display" data-nosnippet>
       <div class="mx-auto rounded analysisview p-3" style="width: 500px">
