--- a/src/contact.html
+++ b/src/contact.html
@@ -51,13 +51,13 @@
     </nav>
   </div>
 
-  <div class="container" data-nosnippet>
+  <header class="mb-3">
+    <div class="text-center">
+      <h1 class="pageheader">Contact Us</h1>
+    </div>
+  </header>
 
-    <header class="py-3">
-      <div class="text-center">
-        <h1 class="pageheader">Contact Us</h1>
-      </div>
-    </header>
+  <div class="container" data-nosnippet>
 
     <div class="row" id="display">
       <div class="col-sm-auto mx-auto my-2 py-4 px-5 rounded analysisview" id="sheet">
