--- a/src/range-equity.html
+++ b/src/range-equity.html
@@ -52,16 +52,16 @@
     </nav>
   </div>
 
-  <header class="mb-4">
+  <header class="mb-3">
     <div class="text-center" data-nosnippet>
       <h1 class="pageheader">Range vs Range Equity Calculator</h1>
     </div>
   </header>
 
-  <div class="container">
+  <div class="container-lg">
 
     <div class="row" id="display" data-nosnippet>
-      <div class="col-lg-11 mx-auto py-4 px-md-5 rounded analysisview">
+      <div class="col-lg-11 mx-auto py-4 px-md-5 rounded analysisview" style="max-width: 998px">
         <div class="table-responsive">
           <table class="table table-hover" style="margin-bottom: 0;">
             <thead>
