--- a/src/contact.html
+++ b/src/contact.html
@@ -60,7 +60,7 @@
   <div class="container" data-nosnippet>
 
     <div class="row" id="display">
-      <div class="col-sm-auto mx-auto my-2 py-4 px-5 rounded analysisview" id="sheet">
+      <div class="col-sm-auto mx-auto py-4 px-5 rounded analysisview" id="sheet">
         <script>
           function doSomething() {
             var radioValue = $("input[name='pokertest']:checked").val();
