add playamo ads

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js" integrity="sha512-kZsqvmw94Y8hyhwtWZJvDtobwQ9pLhF1DuIvcqSuracbRn6WJs1Ih+04fpH/8d1CFKysp7XA1tR0Aa2jKLTQUg==" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="static/styles.css">
   <script src="index.js" type="text/javascript" defer></script>
+  <script src="info.js" type="text/javascript" defer></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168084704-1"></script>
   <script>
@@ -149,6 +150,7 @@
         <div class="row px-4 collapse" id="river_combos_all"></div>
       </div>
     </div>
+    <div id="right-gutter"></div>
   </div>
   <div class="container">
     <div class="info my-5">
