--- a/src/404.html
+++ b/src/404.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Page not found</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/ico" href="static/favicon.ico">
+  <link rel="icon" type="image/png" href="static/logo.png">
   <style type="text/css" media="screen">
     body {
       background-color: #1A1A1B;
